--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     {{#each articles}}
       <article class="article">
         <section class="articleContent">
-            {{topic}} : <a href="#"><h5>{{title}}</h3></a>
+            {{topic}} : <a href="{{url}}" target=_blank><h5>{{title}}</h3></a>
         </section>
         <div class="clearfix"></div>
       </article>
